--- a/back-end/02-tools-and-context/demo-code/commonjs-modules/package.json
+++ b/back-end/02-tools-and-context/demo-code/commonjs-modules/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "00-empty-template",
+  "name": "commonjs-modules",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
-    "test": "eslint . && jest --coverage",
-    "lint": "eslint ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "babel-eslint": "^9.0.0",
-    "dotenv": "^6.0.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
