--- a/back-end/08-http-routing/demo-code/http-server/package.json
+++ b/back-end/08-http-routing/demo-code/http-server/package.json
@@ -18,7 +18,8 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.22.0",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "superagent": "^4.0.0-beta.5"
   },
   "dependencies": {
     "uuid": "^3.3.2",
