--- a/front-end/34-graphs-and-review/demo-code/trees/package.json
+++ b/front-end/34-graphs-and-review/demo-code/trees/package.json
@@ -22,6 +22,8 @@
     "superagent": "^4.0.0-beta.5"
   },
   "dependencies": {
+    "queue-fifo": "^0.2.5",
+    "stack-lifo": "^0.1.5",
     "uuid": "^3.3.2",
     "winston": "^3.1.0"
   }
