--- a/front-end/34-graphs-and-review/demo-code/final-kanban/package.json
+++ b/front-end/34-graphs-and-review/demo-code/final-kanban/package.json
@@ -20,6 +20,8 @@
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "css-loader": "^1.0.0",
     "dotenv": "^6.1.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
